# python_datascience

./: .gitignore  .requirements
0_Starting/: .gitignore
0_Starting/ex00/: Hello.py
0_Starting/ex01/: format_ft_time.py
0_Starting/ex02/: find_ft_type.py  tester.py
0_Starting/ex03/: NULL_not_found.py  tester.py
0_Starting/ex04/: whatis.py
0_Starting/ex05/: building.py
0_Starting/ex06/: filterstring.py  ft_filter.py  tester.py  tester2.py
0_Starting/ex07/: sos.py
0_Starting/ex08/: Loading.py  tester.py
0_Starting/ex09/ft_package/: README.md  pyproject.toml
0_Starting/ex09/ft_package/src/ft_package/: __init__.py  ft_package.py
0_Starting/ex09/ft_package/tests/: test.py
1_Arrays/ex00/: give_bmi.py
1_Arrays/ex01/: array2D.py  tester.py
1_Arrays/ex02/: load_image.py  tester.py
1_Arrays/ex03/: load_image.py  zoom.py
1_Arrays/ex04/: transpose.py
1_Arrays/ex05/: load_image.py  pimp_image.py  tester.py
2_DataTable/ex01/: aff_life.py  load_csv.py
2_DataTable/ex02/: aff_pop.py
2_DataTable/ex03/: projection_life.py
3_Oriented_Object/ex00/: tester.py
3_Oriented_Object/ex01/: tester.py
3_Oriented_Object/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
3_Oriented_Object/ex03/: ft_calculator.py  tester.py
3_Oriented_Object/ex04/: ft_calculator.py  tester.py
4_Data_Oriented_Design/ex00/: statistics.py  tester.py
4_Data_Oriented_Design/ex01/: in_out.py  tester.py
4_Data_Oriented_Design/ex02/: callLimit.py
4_Data_Oriented_Design/ex03/: new_student.py  tester.py
